# woocommerce-client

./: Cargo.toml
src/client/: client.rs  coupon_client.rs  mod.rs  order_client.rs  product_client.rs
src/models/: common.rs  coupon.rs  mod.rs  order.rs  product.rs
