[package]
name = "woocommerce-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
service-sdk = { tag = "0.4.2", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
] }

base64 = "0.21.5"

tokio = { version = "*", features = ["full"] } 
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"
async-trait = "*"

env_logger = "*"
log = "*"
